# lscmd

./: Cargo.toml  PRD.md  README.md  TASKS.md  TODO.md  UI_DESIGN.md  UI_LOGIC.md  lscmd.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: command.rs  lib.rs  parser.rs  scanner.rs
src/: cli.rs  error.rs  lib.rs  main.rs  parser.rs  search.rs  security.rs
src/config/: mod.rs
src/database/: mod.rs  operations.rs  schema.rs
src/tui/: app.rs  events.rs  ui.rs
src/utils/: file_scanner.rs  mod.rs  parallel.rs
tests/: test__phase1__core_arch_and_models.rs  test__phase2__database_and_search.rs  test__phase2__security.rs
